CPG-DEV/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountPlanCount__c</fullName>
        <label>Account Plan Count</label>
        <summaryForeignKey>AccountPlan__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <globalPicklist>Lead_Source</globalPicklist>
        <label>Account Source</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Name &amp; &apos;-&apos; &amp; text(Market_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_image__c</fullName>
        <formula>CASE(  RecordType.Name  , &apos;Global Account&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezV&quot;,&apos;logo&apos;,50,50),&apos;Ship To&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezX&quot;,&apos;logo&apos;,50,50),&apos;Sold To&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezY&quot;,&apos;logo&apos;,50,50),&apos;Plant&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezW&quot;,&apos;logo&apos;,50,50),&apos;Prospect&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezW&quot;,&apos;logo&apos;,50,50),&apos;Country Account Group&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezU&quot;,&apos;logo&apos;,50,50),&apos;Competitor&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01541000001wezT&quot;,&apos;logo&apos;,50,50),&quot;&quot;)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveBusinessCount__c</fullName>
        <description>Active Business Detail relationships with the Account record. Applicable on to Customer Global Account records to drive the Account Status.</description>
        <label>Active Business Count</label>
        <summaryFilterItems>
            <field>BusinessDetail__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessDetail__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chep_Id__c</fullName>
        <label>Chep Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Performance_Trend__c</fullName>
        <description>Aggregate trend of all competitor&apos;s relationships with customers</description>
        <inlineHelpText>Aggregate trend of all competitor&apos;s relationships with customers. Calculated form competitor-customer relationship records.</inlineHelpText>
        <label>Competitor Performance Trend</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Type__c</fullName>
        <label>Competitor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompetitorsValueProposition__c</fullName>
        <label>Competitor&apos;s Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <label>Current Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomerSatisfaction__c</fullName>
        <label>Is customer Happy With Current Supplier?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Classification__c</fullName>
        <globalPicklist>Customer_Classification</globalPicklist>
        <label>Customer Classification</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Reason__c</fullName>
        <description>US#13</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Inco_Terms__c</fullName>
        <label>Default Inco Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Terms__c</fullName>
        <label>Default Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Different_Comp_Actions_Learning__c</fullName>
        <label>Different Comp Actions for Learning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Customer__c</fullName>
        <label>Division Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_Business_with_Competitor_Reason__c</fullName>
        <description>US#14</description>
        <label>Doing Business with Competitor Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Plant Location/Freight Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Source Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (dependent on Reason to complete for Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation/Credibility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERP_ID_Bill_To__c</fullName>
        <label>ERP ID (Bill To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Id_Ship_To__c</fullName>
        <label>ERP Id (Ship To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseRecordName__c</fullName>
        <label>EnterpriseRecordName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Cargill_Employees_Working_Here__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are there any ex-Cargill employees working there?</description>
        <inlineHelpText>Are there any ex-Cargill employees working there?</inlineHelpText>
        <label>Ex-Cargill Employees Working Here?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalAccountStatus__c</fullName>
        <formula>IF(
   ActiveBusinessCount__c &gt;= 0, 
   &quot;Active&quot;,
   &quot;Inactive&quot;
   )</formula>
        <label>Global Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalDescription__c</fullName>
        <description>255 Character Summary Description used in Reports and Cross Object Formula Fields</description>
        <label>Global Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Capabilities__c</fullName>
        <description>US27</description>
        <label>IT Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Self Serve Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital store front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS tracking transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID in packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering E Commerce solutions like Ariba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product value calculators</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExcludedFromRealign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Territory Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Universal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Universal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Market_Channel__c</fullName>
        <label>Legacy Market Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>XLDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLGO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Losing_Business_To_Competitor_Reason__c</fullName>
        <description>US15</description>
        <label>Losing Business To Competitor: Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Due to Price (gross)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Capacity to Sell (volume)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in the Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stronger relationship with the competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot meet distributor minimums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Execution Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Distribution (area)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to expand number of suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We were not price competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product not a match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Price (net)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Channel__c</fullName>
        <label>Market Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Retail Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protein Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Channel_2__c</fullName>
        <label>Market Sub Channel 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Channel__c</fullName>
        <label>Market Sub Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergeAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICSCode__c</fullName>
        <label>NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICSDescription__c</fullName>
        <label>NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Names_of_the_Ex_cargill_employees__c</fullName>
        <label>Names of the Ex-cargill Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfRelatedEnterpriseRecords__c</fullName>
        <label>Number of Related Enterprise Records</label>
        <summaryForeignKey>RelatedEnterpriseRecords__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Competitive_Bids__c</fullName>
        <description>US#12</description>
        <label>Number of Competitive Bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Details__c</fullName>
        <label>Offering Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutOfBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Role_at_Cargill__c</fullName>
        <label>Previous Role at Cargill</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Providing_Financial_Risk_Mgmt_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Providing Financial/Risk Mgmt Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Doing_Business_with_Competitor__c</fullName>
        <description>US#14</description>
        <label>Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Losing_Business_To_Competitor__c</fullName>
        <description>US15</description>
        <label>Reason Description (Loss)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Few</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Servicing_Offering__c</fullName>
        <label>Servicing Offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <label>Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_of_Competitors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Competitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <label>Tradestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateParentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal_Bill_To_Name__c</fullName>
        <label>Universal Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Ship_To_Name__c</fullName>
        <label>Universal Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YearStarted__c</fullName>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy_On_Previous_Hierarchy_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Previous Hierarchy Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDistributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account provides a Distributor function for Cargill products.</description>
        <inlineHelpText>Account provides a Distributor function for Cargill products.</inlineHelpText>
        <label>Distributor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_With_Account_Plan</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountPlanCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Account With Account Plan</label>
    </listViews>
    <listViews>
        <fullName>Account_Without_Account_Plan</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountPlanCount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </filters>
        <label>Account Without Account Plan</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Is_Universal__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Market_Channel__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryAccountGroup</fullName>
        <active>true</active>
        <description>Customer Defined Country/Regional Account Grouping</description>
        <label>Country Account Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>GlobalAccount</fullName>
        <active>true</active>
        <label>Global Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShipTo</fullName>
        <active>true</active>
        <label>Ship To</label>
    </recordTypes>
    <recordTypes>
        <fullName>SoldTo</fullName>
        <active>true</active>
        <label>Sold To</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LegacyAccount_MarketChannelReadOnly</fullName>
        <active>true</active>
        <description>Cannot modify existing Account market channel</description>
        <errorConditionFormula>AND(
NOT($RecordType.Name= &quot;Prospect&quot;), 
 NOT($Setup.Integration_profile__c.SkipValidationProfiles__c), ISCHANGED(  Market_Channel__c  ),
NOT( ISBLANK( PRIORVALUE(Market_Channel__c ) ) ) 
)</errorConditionFormula>
        <errorDisplayField>Market_Channel__c</errorDisplayField>
        <errorMessage>Market Channel for existing Account cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LegacyAccount_NameReadOnly</fullName>
        <active>true</active>
        <description>Cannot modify existing Account Name</description>
        <errorConditionFormula>AND(
NOT($RecordType.Name = &quot;Prospect&quot;), 
NOT($Setup.Integration_profile__c.SkipValidationProfiles__c), ISCHANGED( Name ) ,
NOT(  ISBLANK( PRIORVALUE(Name ) ) ) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name for existing Account cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>